@@ -135,6 +135,7 @@ Error is fixed, was due to a src/services/Services.hpp old code
      see https://scan.coverity.com/download for more (currently at 4%)
 - [ ] rev 253 uploaded to coverity scan 23 Nov     
 **** TODO Options gamestate
+     CLOCK: [2017-02-20 lun. 12:04]--[2017-02-20 lun. 12:52] =>  0:48
      CLOCK: [2017-02-20 lun. 10:30]--[2017-02-20 lun. 11:15] =>  0:45
      CLOCK: [2017-02-20 lun. 09:06]--[2017-02-20 lun. 10:24] =>  1:18
      CLOCK: [2017-02-06 lun. 09:48]--[2017-02-06 lun. 10:47] =>  0:59
@@ -199,7 +200,13 @@ Error is fixed, was due to a src/services/Services.hpp old code
       - [X] Trying to move clearGeometry and drawOverlay between messagePump and renderOneFrame
 	Don't work
       - [ ] Still doesn't work	
-    - [ ] We don't set waiting to false so the exec() function never exit.
+    - [-] We don't set waiting to false so the exec() function never exit.
+      - [X] Create the XML layout
+	Set the title/message from the constructor
+	There is a pb with the name : it's called nyiRoot because it shares
+	the CeguiDialog's constructor which use nyiRoot
+      - [X] Must contain at least two buttons (Ok/Cancel)	
+      - [ ] Handle Ok and Cancel buttons events
   - [ ] Create a ConfirmationDialog class (based on ModalDialog)
 - [ ] Some overlays disappear in 1280x1024 resolution
   - List all overlays affected by this bug
